--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-plusplus": 0
+        "no-plusplus": 0,
+        "no-restricted-globals": 0,
+        "consistent-return": 0
     }
 }
